Fix: Store, Product 전체조회 API 버그 수정
1. Service의 조회 후 반환하는곳에서 있던 버그 수정.
findAll().stream().map(store -> new StoreInfoResponseDto()).toList();

->

findAll().stream().map(StoreInfoResponseDto::fromEntity).collect(Collectors.toList());